# clpga_demo

./: .env.example  .gitignore  README.md  pyproject.toml
clpga_demo/: __init__.py  __main__.py  cleaner.py  cropper.py  momentum.py  pipeline.py  presets.py  scene_analyzer.py  smoother.py  tracker.py  void_model.py
docs/superpowers/plans/: 2026-03-20-golf-ball-tracker.md  2026-03-20-shot-presets.md  2026-03-24-kalman-ball-tracker.md  2026-03-24-momentum-tracking.md  2026-03-25-momentum-rejection-improvement.md  2026-04-08-distractor-removal.md  2026-04-09-vlm-guided-distractor-removal.md
docs/superpowers/specs/: 2026-03-19-golf-ball-tracker-design.md  2026-03-20-shot-presets-design.md  2026-03-24-kalman-ball-tracker-design.md  2026-03-24-momentum-tracking-design.md  2026-03-25-momentum-rejection-improvement-design.md  2026-04-08-distractor-removal-design.md  2026-04-09-vlm-guided-distractor-removal-design.md
tests/: .___init__.py  test_cleaner.py  test_cli.py  test_cropper.py  test_momentum.py  test_pipeline.py  test_presets.py  test_scene_analyzer.py  test_smoother.py  test_tracker.py  test_void_model.py
